Update bug spacing

--- a/scss/_bug.scss
+++ b/scss/_bug.scss
@@ -24,10 +24,10 @@
         img {
             display: inline-block;
             position: absolute;
-			
+
 			&#forge {
 	            top: 0.55vw;
-	            height: 1.8vw;
+	            height: $bug-height * 0.6;
 	            left: $bug-logo-left + 2vw;
 				opacity: 0.4;
 				transform: scale(1.3) rotate(-6deg);
@@ -49,8 +49,8 @@
 		color: $dark-colour;
 
         //padding-top: 0.1vw;
-        width: 9vw;
-        left: $bug-logo-width - 2vw;
+        width: $bug-height * 3.91;
+        left: $bug-logo-width - 3.5vw;
         z-index: -1;
 
 		.liveSegmentText {
@@ -59,12 +59,11 @@
 
             > span {
 				display: block;
-		        font-size: 2.2vw;
-                width: 9vw;
+                width: $bug-height * 3;
                 position: absolute;
                 line-height: $bug-height;
 				font-weight: 700;
-				left: 0.5vw;
+				left: $bug-height * 0.88;
             }
         }
 
